# obsidian

./: .gitignore  .gitmodules  .travis.yml  APPSTORE_DESC.txt  CMakeLists.txt  DEVELOPER.md  LICENCE.txt  Makefile  README.md  appinfo.json  before_install.sh  package.json
config/: index.html
config/css/: nupe.css
config/js/: gcolor.js  pebble.js  preview.js  slate.js
data/: menu_icon.ora
resources/: OpenSans-CondensedBold.ffont  nupe2.ffont
resources/fonts/: nupe2-small.bf  nupe2.bf  readme.txt
resources/src/: banner_background.ora
scripts/: assemble_resources.sh  assemble_screenshots.sh  build_quiet.sh  capture-settings-screenshot.js  take_screenshot.sh
src/: config.h  drawing.c  drawing.h  geometry.c  geometry.h  obsidian.c  obsidian.h  settings.c  settings.h  simplex.c  simplex.h
src/js/: pebble-js-app.js
src/scripts/: updated_config.sh
